--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,31 +1,32 @@
 {
   "name": "whatsapp-agent-server",
   "version": "0.1.0",
-  "private": true,
   "type": "module",
+  "private": true,
   "scripts": {
-    "dev": "tsx watch src/app.ts",
-    "start": "node dist/app.js",
+    "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
     "build": "tsc",
-    "db:init": "psql \"$DATABASE_URL\" -f config/schema.sql",
-    "seed": "tsx scripts/seed.ts"
+    "start": "node dist/app.js",
+    "db:init": "node dist/scripts/initDb.js",
+    "seed": "node dist/scripts/seedDemo.js"
   },
   "dependencies": {
-    "fastify": "^4.28.1",
-    "@fastify/formbody": "^7.4.0",
-    "pino": "^9.3.2",
-    "dotenv": "^16.4.5",
-    "zod": "^3.23.8",
-    "pg": "^8.12.0",
-    "ioredis": "^5.4.2",
+    "fastify": "^4.28.0",
+    "fastify-cors": "^8.5.0",
+    "fastify-helmet": "^11.1.1",
+    "fastify-jwt": "^5.0.1",
+    "pg": "^8.11.5",
+    "redis": "^4.6.13",
     "undici": "^6.19.8",
-    "openai": "^4.59.0",
-    "@fastify/cors": "^10.0.1"
+    "openai": "^4.57.0"
   },
   "devDependencies": {
-    "typescript": "^5.6.3",
-    "tsx": "^4.19.1",
-    "@types/node": "^22.5.4"
-    "@types/pg"
+    "@types/node": "^20.14.10",
+    "@types/pg": "^8.10.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.5.4"
+  },
+  "engines": {
+    "node": ">=18 <=20"
   }
 }
