--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "admin",
+  "name": "whatsapp-agent-admin",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev -p 3000",
@@ -7,8 +8,19 @@
     "start": "next start -p 3000"
   },
   "dependencies": {
-    "next": "14.2.5",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "next": "^14.2.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "swr": "^2.2.5",
+    "axios": "^1.7.2"
+  },
+  "devDependencies": {
+    "@types/node": "^20.14.10",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.1",
+    "typescript": "^5.5.4"
+  },
+  "engines": {
+    "node": ">=18 <=20"
   }
 }
