--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -12,13 +12,13 @@
   },
   "dependencies": {
     "fastify": "^4.28.0",
-    "fastify-cors": "^8.5.0",
-    "fastify-helmet": "^11.1.1",
-    "fastify-jwt": "^5.0.1",
-    "pg": "^8.11.5",
-    "redis": "^4.6.13",
-    "undici": "^6.19.8",
-    "openai": "^4.57.0"
+  "@fastify/cors": "^10.0.1",
+  "@fastify/helmet": "^12.4.0",
+  "@fastify/jwt": "^7.2.0",
+  "pg": "^8.11.5",
+  "redis": "^4.6.13",
+  "undici": "^6.19.8",
+  "openai": "^4.59.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
