--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -8,16 +8,19 @@
     "build": "tsc",
     "start": "node dist/app.js",
     "db:init": "node dist/scripts/initDb.js",
-    "seed": "node dist/scripts/seedDemo.js"
+    "seed": "node dist/scripts/seed.js"
   },
   "dependencies": {
     "fastify": "^4.28.0",
-  "@fastify/cors": "^10.0.1",
-  "@fastify/jwt": "^7.2.0",
-  "pg": "^8.11.5",
-  "redis": "^4.6.13",
-  "undici": "^6.19.8",
-  "openai": "^4.59.0"
+    "@fastify/cors": "^10.0.1",
+    "@fastify/jwt": "^7.2.0",
+    "@fastify/formbody": "^7.0.0",
+    "dotenv": "^16.4.5",
+    "ioredis": "^5.4.1",
+    "pg": "^8.11.5",
+    "undici": "^6.19.8",
+    "openai": "^4.59.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
