--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -1,16 +1,21 @@
 {
   "compilerOptions": {
-    "target": "ES2022",
-    "module": "ES2022",
-    "moduleResolution": "bundler",
+    "target": "ES2020",
+    "module": "ES2020",
+    "moduleResolution": "Bundler",
     "outDir": "dist",
     "rootDir": "src",
     "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "resolveJsonModule": true,
+    "skipLibCheck": true
   },
-  "include": [
-    "src"
+  "include": ["src/**/*.ts", "scripts/**/*.ts"],
+  "exclude": [
+    "node_modules",
+    "**/*.test.ts",
+    "app/**",
+    "../admin/**",
+    "apps/admin/**"
   ]
 }
