--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -1,34 +1,24 @@
 {
-  "name": "whatsapp-agent-server",
+  "name": "whatsapp-agent-admin",
   "version": "0.1.0",
-  "type": "module",
   "private": true,
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
-    "build": "tsc",
-    "start": "node dist/app.js",
-    "db:init": "node dist/scripts/initDb.js",
-    "seed": "node dist/scripts/seed.js"
+    "dev": "next dev -p 3000",
+    "build": "next build",
+    "start": "next start -p 3000"
   },
   "dependencies": {
-    "fastify": "^4.28.0",
-    "@fastify/cors": "^10.0.1",
-    "@fastify/jwt": "^7.2.0",
-    "@fastify/formbody": "^7.0.0",
-    "dotenv": "^16.4.5",
-    "ioredis": "^5.4.1",
-    "pg": "^8.11.5",
-    "undici": "^6.19.8",
-    "openai": "^4.59.0",
-    "zod": "^3.23.8"
+    "next": "^14.2.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "swr": "^2.2.5",
+    "axios": "^1.7.2"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
-    "@types/pg": "^8.10.2",
-    "ts-node-dev": "^2.0.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.1",
     "typescript": "^5.5.4"
   },
-  "engines": {
-    "node": ">=18 <=20"
-  }
+  "engines": { "node": ">=18 <=20" }
 }
