--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -4,13 +4,13 @@
     "module": "ES2020",
     "moduleResolution": "Bundler",
     "outDir": "dist",
-    "rootDir": ".",                       // <-- include src + scripts
+    "rootDir": ".",                      // include src + scripts
     "strict": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts", "scripts/**/*.ts"],   // <-- keep scripts in build
+  "include": ["src/**/*.ts", "scripts/**/*.ts"],
   "exclude": [
     "node_modules",
     "**/*.test.ts",
